Updated requirements to remove security problems

--- a/annotation_website/requirements.txt
+++ b/annotation_website/requirements.txt
@@ -1,55 +1,55 @@
-appnope==0.1.0
-astroid==1.5.3
-bleach==2.1.1
-click==6.7
-decorator==4.1.2
-entrypoints==0.2.3
-Flask==0.12.2
-Flask-Cors==3.0.3
-Flask-JWT-Simple==0.0.3
-html5lib==1.0b10
-ipykernel==4.6.1
-#ipython==6.2.1
-#ipython-genutils==0.2.0
-ipywidgets==7.0.3
-isort==4.2.15
-itsdangerous==0.24
-jedi==0.11.0
-Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-lazy-object-proxy==1.3.1
-MarkupSafe==1.0
-mccabe==0.6.1
-mistune==0.8.1
-nbconvert==5.3.1
-nbformat==4.4.0
+appnope
+astroid
+bleach
+click
+decorator
+entrypoints
+Flask
+Flask-Cors
+Flask-JWT-Simple
+html5lib
+ipykernel
+#ipython
+#ipython-genutils
+ipywidgets
+isort
+itsdangerous
+jedi
+Jinja2
+jsonschema
+jupyter
+jupyter-client
+jupyter-console
+jupyter-core
+lazy-object-proxy
+MarkupSafe
+mccabe
+mistune
+nbconvert
+nbformat
 notebook
-numpy==1.13.3
-pandocfilters==1.4.2
-parso==0.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-Pygments==2.2.0
-PyJWT==1.4.2
-pylint==1.7.4
-python-dateutil==2.6.1
-pyzmq==16.0.3
-qtconsole==4.3.1
-simplegeneric==0.8.1
-six==1.11.0
-sqlitedict==1.5.0
-terminado==0.6
-testpath==0.3.1
-tornado==4.5.2
-traitlets==4.3.2
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.12.2
-widgetsnbextension==3.0.6
-wrapt==1.10.11
+numpy
+pandocfilters
+parso
+pexpect
+pickleshare
+prompt-toolkit
+ptyprocess
+Pygments
+PyJWT
+pylint
+python-dateutil
+pyzmq
+qtconsole
+simplegeneric
+six
+sqlitedict
+terminado
+testpath
+tornado
+traitlets
+wcwidth
+webencodings
+Werkzeug
+widgetsnbextension
+wrapt
